@@ -80,7 +80,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -88,20 +87,20 @@ import java.util.stream.Stream;
  */
 @ExtendWith(JUnit5Mockery.class)
 public class ServerConfigHandlerTest extends BaseHandlerTestCase {
-    private TaskomaticApi taskomaticApi = new TaskomaticApi();
-    private SaltApi saltApi = new TestSaltApi();
-    private SystemQuery systemQuery = new TestSystemQuery();
-    private CloudPaygManager paygManager = new CloudPaygManager();
-    private AttestationManager attestationManager = new AttestationManager();
-    private RegularMinionBootstrapper regularMinionBootstrapper =
+    private final TaskomaticApi taskomaticApi = new TaskomaticApi();
+    private final SaltApi saltApi = new TestSaltApi();
+    private final SystemQuery systemQuery = new TestSystemQuery();
+    private final CloudPaygManager paygManager = new CloudPaygManager();
+    private final AttestationManager attestationManager = new AttestationManager();
+    private final RegularMinionBootstrapper regularMinionBootstrapper =
             new RegularMinionBootstrapper(systemQuery, saltApi, paygManager, attestationManager);
-    private SSHMinionBootstrapper sshMinionBootstrapper =
+    private final SSHMinionBootstrapper sshMinionBootstrapper =
             new SSHMinionBootstrapper(systemQuery, saltApi, paygManager, attestationManager);
-    private XmlRpcSystemHelper xmlRpcSystemHelper = new XmlRpcSystemHelper(
+    private final XmlRpcSystemHelper xmlRpcSystemHelper = new XmlRpcSystemHelper(
             regularMinionBootstrapper,
             sshMinionBootstrapper
     );
-    private ServerConfigHandler handler = new ServerConfigHandler(taskomaticApi, xmlRpcSystemHelper);
+    private final ServerConfigHandler handler = new ServerConfigHandler(taskomaticApi, xmlRpcSystemHelper);
 
     @RegisterExtension
     protected final Mockery mockContext = new JUnit5Mockery() {{
@@ -110,7 +109,7 @@ public class ServerConfigHandlerTest extends BaseHandlerTestCase {
     }};
 
     @Test
-    public void testDeployConfiguration() throws Exception {
+    public void testDeployConfiguration() {
         // Create  global config channels
         ConfigChannel gcc1 = ConfigTestUtils.createConfigChannel(admin.getOrg(),
                 ConfigChannelType.normal());
@@ -206,7 +205,7 @@ public class ServerConfigHandlerTest extends BaseHandlerTestCase {
 
         //test add channels
         handler.addChannels(admin, serverIds,
-                Stream.of(gcc1).map(cc -> cc.getLabel()).collect(Collectors.toList()), true);
+                Stream.of(gcc1).map(ConfigChannel::getLabel).toList(), true);
 
         TestUtils.saveAndFlush(srv1);
         HibernateFactory.getSession().detach(srv1);
@@ -226,7 +225,7 @@ public class ServerConfigHandlerTest extends BaseHandlerTestCase {
 
         List<ConfigChannel> channels = List.of(gcc1, gcc2);
 
-        List<String> channelLabels = channels.stream().map(cc -> cc.getLabel()).collect(Collectors.toList());
+        List<String> channelLabels = channels.stream().map(ConfigChannel::getLabel).toList();
 
         //test set channels
         handler.setChannels(admin, serverIds, channelLabels);
@@ -253,7 +252,7 @@ public class ServerConfigHandlerTest extends BaseHandlerTestCase {
 
         //test add channels
         handler.addChannels(admin, serverIds,
-                Stream.of(gcc2).map(cc -> cc.getLabel()).collect(Collectors.toList()), false);
+                Stream.of(gcc2).map(ConfigChannel::getLabel).toList(), false);
 
         TestUtils.saveAndFlush(srv1);
         HibernateFactory.getSession().detach(srv1);
@@ -275,8 +274,8 @@ public class ServerConfigHandlerTest extends BaseHandlerTestCase {
 
         List<ConfigChannel> channels = List.of(gcc1, gcc2);
         List<String> channelLabels = channels.stream()
-                .map(cc -> cc.getLabel())
-                .collect(Collectors.toList());
+                .map(ConfigChannel::getLabel)
+                .toList();
 
         srv1.setConfigChannels(channels, regular);
 
